Upgrading to net6.0

--- a/src/Client/Shared/Loader.razor
+++ b/src/Client/Shared/Loader.razor
@@ -39,7 +39,7 @@
         timer.AutoReset = false;
     }
 
-    private void OnTimedEvent(Object source, System.Timers.ElapsedEventArgs e) 
+    private void OnTimedEvent(Object? source, System.Timers.ElapsedEventArgs e) 
     {
         if (!loading) {
             shown = false;
