--- a/src/Client/wwwroot/css/app.css
+++ b/src/Client/wwwroot/css/app.css
@@ -1,4 +1,9 @@
-﻿/* Fonts
+﻿/* Other CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+@import url('normalize/normalize.min.css');
+@import url('line-awesome/css/line-awesome.min.css');
+
+/* Fonts
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @import url(//fonts.googleapis.com/css?family=Literata);
 @import url(//fonts.googleapis.com/css?family=Raleway);
@@ -6,8 +11,8 @@
 /* Variables
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 :root {
-  --primary-color: #33c3f0;
-  --secondary-color: #1eaedb;
+    --primary-color: #33c3f0;
+    --secondary-color: #1eaedb;
 }
 
 /* Base Styles
@@ -17,39 +22,39 @@
   html is set to 62.5% so that all the REM measurements throughout Skeleton
   are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
-  font-size: 62.5%;
-  height: 100%;
+    font-size: 62.5%;
+    height: 100%;
 }
 
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: 'Literata', serif;
-  color: #222;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
+    font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: 'Literata', serif;
+    color: #222;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 #app {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
 }
 
 #blazor-error-ui {
-  display: none;
+    display: none;
 }
 
 /* Container
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* Typography
@@ -60,91 +65,91 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 300;
-  font-family: 'Raleway', sans-serif;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-weight: 300;
+    font-family: 'Raleway', sans-serif;
 }
 
 h1 {
-  font-size: 4rem;
-  line-height: 1.2;
-  letter-spacing: -0.1rem;
+    font-size: 4rem;
+    line-height: 1.2;
+    letter-spacing: -0.1rem;
 }
 
 h2 {
-  font-size: 3.6rem;
-  line-height: 1.25;
-  letter-spacing: -0.1rem;
+    font-size: 3.6rem;
+    line-height: 1.25;
+    letter-spacing: -0.1rem;
 }
 
 h3 {
-  font-size: 3rem;
-  line-height: 1.3;
-  letter-spacing: -0.1rem;
+    font-size: 3rem;
+    line-height: 1.3;
+    letter-spacing: -0.1rem;
 }
 
 h4 {
-  font-size: 2.4rem;
-  line-height: 1.35;
-  letter-spacing: -0.08rem;
+    font-size: 2.4rem;
+    line-height: 1.35;
+    letter-spacing: -0.08rem;
 }
 
 h5 {
-  font-size: 1.8rem;
-  line-height: 1.5;
-  letter-spacing: -0.05rem;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    letter-spacing: -0.05rem;
 }
 
 h6 {
-  font-size: 1.5rem;
-  line-height: 1.6;
-  letter-spacing: 0;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    letter-spacing: 0;
 }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-  h1 {
-    font-size: 5rem;
-  }
+    h1 {
+        font-size: 5rem;
+    }
 
-  h2 {
-    font-size: 4.2rem;
-  }
+    h2 {
+        font-size: 4.2rem;
+    }
 
-  h3 {
-    font-size: 3.6rem;
-  }
+    h3 {
+        font-size: 3.6rem;
+    }
 
-  h4 {
-    font-size: 3rem;
-  }
+    h4 {
+        font-size: 3rem;
+    }
 
-  h5 {
-    font-size: 2.4rem;
-  }
+    h5 {
+        font-size: 2.4rem;
+    }
 
-  h6 {
-    font-size: 1.5rem;
-  }
+    h6 {
+        font-size: 1.5rem;
+    }
 }
 
 p {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 /* Spacing
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 button:not(.link),
 .button {
-  margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 input,
 textarea,
 select,
 fieldset {
-  margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 pre,
@@ -156,32 +161,32 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
 /* Links
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .link,
 a:not(.button) {
-  color: var(--primary-color);
-  text-decoration: none;
-  cursor: pointer;
+    color: var(--primary-color);
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.link:hover,
-button.link,
-a:not(.button):hover {
-  color: var(--secondary-color);
-  text-decoration: underline;
-}
+    .link:hover,
+    button.link,
+    a:not(.button):hover {
+        color: var(--secondary-color);
+        text-decoration: underline;
+    }
 
 .link,
 button.link {
-  -webkit-appearance: none;
-  border: none;
-  padding: 0;
-  color: var(--secondary-color);
-  background-color: transparent;
+    -webkit-appearance: none;
+    border: none;
+    padding: 0;
+    color: var(--secondary-color);
+    background-color: transparent;
 }
 
 /* Buttons
@@ -191,64 +196,64 @@ button:not(.link),
 input[type='submit'],
 input[type='reset'],
 input[type='button'] {
-  display: inline-block;
-  height: 38px;
-  padding: 0 30px;
-  color: #000;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 600;
-  line-height: 38px;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
-  cursor: pointer;
-  box-sizing: border-box;
+    display: inline-block;
+    height: 38px;
+    padding: 0 30px;
+    color: #000;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box;
 }
 
-.button:hover,
-button:not(.link):hover,
-input[type='submit']:hover,
-input[type='reset']:hover,
-input[type='button']:hover,
-.button:focus,
-button:focus,
-input[type='submit']:focus,
-input[type='reset']:focus,
-input[type='button']:focus {
-  color: #000;
-  border-color: var(--primary-color);
-  outline: 0;
-}
+    .button:hover,
+    button:not(.link):hover,
+    input[type='submit']:hover,
+    input[type='reset']:hover,
+    input[type='button']:hover,
+    .button:focus,
+    button:focus,
+    input[type='submit']:focus,
+    input[type='reset']:focus,
+    input[type='button']:focus {
+        color: #000;
+        border-color: var(--primary-color);
+        outline: 0;
+    }
 
-.button.button-primary,
-button.button-primary,
-input[type='submit'].button-primary,
-input[type='reset'].button-primary,
-input[type='button'].button-primary {
-  color: #fff;
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
-}
+    .button.button-primary,
+    button.button-primary,
+    input[type='submit'].button-primary,
+    input[type='reset'].button-primary,
+    input[type='button'].button-primary {
+        color: #fff;
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+    }
 
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type='submit'].button-primary:hover,
-input[type='reset'].button-primary:hover,
-input[type='button'].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type='submit'].button-primary:focus,
-input[type='reset'].button-primary:focus,
-input[type='button'].button-primary:focus {
-  color: #fff;
-  background-color: var(--secondary-color);
-  border-color: var(--secondary-color);
-}
+        .button.button-primary:hover,
+        button.button-primary:hover,
+        input[type='submit'].button-primary:hover,
+        input[type='reset'].button-primary:hover,
+        input[type='button'].button-primary:hover,
+        .button.button-primary:focus,
+        button.button-primary:focus,
+        input[type='submit'].button-primary:focus,
+        input[type='reset'].button-primary:focus,
+        input[type='button'].button-primary:focus {
+            color: #fff;
+            background-color: var(--secondary-color);
+            border-color: var(--secondary-color);
+        }
 
 /* Forms
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -261,13 +266,13 @@ input[type='url'],
 input[type='password'],
 textarea,
 select {
-  height: 38px;
-  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
-  border: 1px solid #d1d1d1;
-  border-radius: 4px;
-  box-shadow: none;
-  box-sizing: border-box;
+    height: 38px;
+    padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+    background-color: #fff;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    box-shadow: none;
+    box-sizing: border-box;
 }
 
 /* Removes awkward default styles on some inputs for iOS */
@@ -279,51 +284,51 @@ input[type='tel'],
 input[type='url'],
 input[type='password'],
 textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 textarea {
-  min-height: 65px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+    min-height: 65px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 label,
 legend {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: 600;
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
 }
 
 fieldset {
-  padding: 0;
-  border-width: 0;
+    padding: 0;
+    border-width: 0;
 }
 
 input[type='checkbox'],
 input[type='radio'] {
-  display: inline;
+    display: inline;
 }
 
 label > .label-body {
-  display: inline-block;
-  margin-left: 0.5rem;
-  font-weight: normal;
+    display: inline-block;
+    margin-left: 0.5rem;
+    font-weight: normal;
 }
 
 /* clears the 'X' from Internet Explorer */
 input[type='search']::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
+    display: none;
+    width: 0;
+    height: 0;
 }
 
 input[type='search']::-ms-reveal {
-  display: none;
-  width: 0;
-  height: 0;
+    display: none;
+    width: 0;
+    height: 0;
 }
 
 /* clears the 'X' from Chrome */
@@ -331,7 +336,7 @@ input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
-  display: none;
+    display: none;
 }
 
 input[type='email']:focus,
@@ -343,108 +348,108 @@ input[type='url']:focus,
 input[type='password']:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid var(--primary-color);
-  outline: 0;
+    border: 1px solid var(--primary-color);
+    outline: 0;
 }
 
 /* Lists
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside;
+    list-style: circle inside;
 }
 
 ol {
-  list-style: decimal inside;
+    list-style: decimal inside;
 }
 
 ol,
 ul {
-  padding-left: 0;
-  margin-top: 0;
+    padding-left: 0;
+    margin-top: 0;
 }
 
-ul ul,
-ul ol,
-ol ol,
-ol ul {
-  margin: 1.5rem 0 1.5rem 3rem;
-  font-size: 90%;
-}
+    ul ul,
+    ul ol,
+    ol ol,
+    ol ul {
+        margin: 1.5rem 0 1.5rem 3rem;
+        font-size: 90%;
+    }
 
 li {
-  margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 /* Utilities
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .flex-fill {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .flex-column {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .flex-row {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .h-100 {
-  height: 100%;
+    height: 100%;
 }
 
 .w-100 {
-  width: 100%;
+    width: 100%;
 }
 
 .overflow-h {
-  overflow: hidden;
-  touch-action: none;
+    overflow: hidden;
+    touch-action: none;
 }
 
 .fade {
-  transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
+    transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
 
 .shown {
-  opacity: 1;
+    opacity: 1;
 }
 
 .hidden {
-  opacity: 0;
+    opacity: 0;
 }
 
 .mr-1 {
-  margin-right: 1rem;
+    margin-right: 1rem;
 }
 
 .mt-1 {
-  top: 1rem;
+    top: 1rem;
 }
- 
+
 .ml-1 {
-  left: 1rem;
+    left: 1rem;
 }
 
 .mb-1 {
-  bottom: 1rem;
+    bottom: 1rem;
 }
 
 /* Misc
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
-  margin-top: 3rem;
-  margin-bottom: 3.5rem;
-  border-width: 0;
-  border-top: 1px solid #e1e1e1;
+    margin-top: 3rem;
+    margin-bottom: 3.5rem;
+    border-width: 0;
+    border-top: 1px solid #e1e1e1;
 }
 
 /* Clearing
@@ -454,9 +459,9 @@ hr {
 .container::after,
 .row::after,
 .u-cf {
-  content: '';
-  display: table;
-  clear: both;
+    content: '';
+    display: table;
+    clear: both;
 }
 
 /* Media Queries
